--- a/style/dashboard.css
+++ b/style/dashboard.css
@@ -1,6 +1,7 @@
 *{
     padding: 0;
     margin: 0;
+    scroll-behavior: smooth;
 }
 .dashboard-header{
     justify-content: center;
@@ -17,6 +18,9 @@
     justify-content: center;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    padding: 10px;
+    gap: 30px;
     margin-top: 50px;
 }
 .image-title{
@@ -28,4 +32,28 @@
 }
 .image-title h1{
     font-size: clamp(1.25rem, 0.4688rem + 2.5vw, 1.875rem);
+}
+
+.useful-tools-content img{
+    width: 100%;
+    max-width: 500px;
+}
+
+.useful-tools-content h1{
+    font-size: clamp(1.25rem, 0.8594rem + 1.25vw, 1.5625rem);
+}
+.useful-tools-content{
+    width: 100%;
+    max-width: 500px;
+    padding: 10px;
+    background: white;
+    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
+    border-radius: 10px 10px;
+}
+.view:hover{
+    cursor: pointer;
+    text-decoration: underline;
+}
+.link{
+    float: inline-end;
 }
