--- a/style/index.css
+++ b/style/index.css
@@ -44,6 +44,7 @@
     display: flex;
     align-items: center;
     height: 60vh;
+    flex-wrap: wrap;
     padding: 20px;
 }
 .you-can-do-it-content{
