--- a/style/index.css
+++ b/style/index.css
@@ -10,6 +10,7 @@
     display: flex;
     align-items: center;
     height: 80vh;
+
 }
 
 .header-content{
@@ -64,4 +65,8 @@
     align-items: center;
     height: 50vh;
     padding: 20px;
+}
+.message-content{
+    width: 100%;
+    max-width: 900px;
 }
